--- a/konwerter.html
+++ b/konwerter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Converter</title>
+        <title>Converter for runners</title>
         <link rel="stylesheet" href="konwerter.css">
     </head>
     <body>
